// Vitest Snapshot v1

exports[`Slider > should render default correctly 1`] = `
"<div class=\\"fx-slider\\">
  <div class=\\"fx-slider_inner\\">
    <div class=\\"fx-slider_box\\">
      <div class=\\"fx-slider_track\\" style=\\"width: 0%;\\"></div>
      <div class=\\"fx-slider_thumb\\" data-thumb=\\"true\\" style=\\"left: 0%;\\"></div>
    </div><input type=\\"hidden\\" name=\\"\\" value=\\"0\\">
  </div>
</div>"
`;

exports[`Slider > should render prop disabled=true correctly 1`] = `
"<div class=\\"fx-slider disabled\\">
  <div class=\\"fx-slider_inner\\">
    <div class=\\"fx-slider_box\\">
      <div class=\\"fx-slider_track\\" style=\\"width: 0%;\\"></div>
      <div class=\\"fx-slider_thumb\\" data-thumb=\\"true\\" style=\\"left: 0%;\\"></div>
    </div><input type=\\"hidden\\" name=\\"\\" disabled=\\"\\" value=\\"0\\">
  </div>
</div>"
`;

exports[`Slider > should render prop showValue=true correctly 1`] = `
"<div class=\\"fx-slider\\">
  <div class=\\"fx-slider_inner\\">
    <div class=\\"fx-slider_box\\">
      <div class=\\"fx-slider_track\\" style=\\"width: 0%;\\"></div>
      <div class=\\"fx-slider_thumb\\" data-thumb=\\"true\\" style=\\"left: 0%;\\">0</div>
    </div><input type=\\"hidden\\" name=\\"\\" value=\\"0\\">
  </div>
</div>"
`;
